--- a/deprecated/zookeeper/requirements.yml
+++ b/deprecated/zookeeper/requirements.yml
@@ -4,5 +4,5 @@
 # From 'openshift-applier'
 - name: openshift-applier
   scm: git
-  src: https://github.com/redhat-cop/openshift-applier
-  version: v1.0.0
+  src: https://github.com/dimjost/openshift-applier
+  version: master
