--- a/tool-box/requirements.yml
+++ b/tool-box/requirements.yml
@@ -4,5 +4,5 @@
 # From 'openshift-applier'
 - name: openshift-applier
   scm: git
-  src: https://github.com/redhat-cop/openshift-applier
-  version: v2.0.8
+  src: https://github.com/dimjost/openshift-applier
+  version: master
