--- a/jenkins-slaves/.applier/group_vars/seed-hosts.yml
+++ b/jenkins-slaves/.applier/group_vars/seed-hosts.yml
@@ -70,6 +70,15 @@ openshift_cluster_content:
     tags:
     - jenkins-slaves
     - mvn-slave
+  - name: jenkins-slave-mvn3.6-openjdk10-node10
+    template: "{{ inventory_dir }}/../.openshift/templates/jenkins-slave-generic-template.yml"
+    params: "{{ inventory_dir }}/../.openshift/params/mvn3.6-openjdk10-node10"
+    params_from_vars:
+      SOURCE_REPOSITORY_REF: "{{ slave_repo_ref }}"
+    namespace: "{{ namespace }}"
+    tags:
+    - jenkins-slaves
+    - mvn-slave
   - name: jenkins-slave-npm
     template: "{{ inventory_dir }}/../.openshift/templates/jenkins-slave-generic-template.yml"
     params: "{{ inventory_dir }}/../.openshift/params/npm"
