--- a/jenkins-slaves/jenkins-slave-mvn3.6-openjdk10-node10/Dockerfile.rhel7
+++ b/jenkins-slaves/jenkins-slave-mvn3.6-openjdk10-node10/Dockerfile.rhel7
@@ -1,7 +1,7 @@
 FROM openshift3/jenkins-slave-base-rhel7:v3.11
 
 LABEL com.redhat.component="jenkins-slave-ansible-rhel7-docker" \
-      name="openshift3/jenkins-slave-mvn3.6.1-openJdk10.02-node10.15.3" \
+      name="openshift3/jenkins-slave-mvn3.6.1-openjdk10.02-node10.15.3" \
       version="3.11" \
       architecture="x86_64" \
       release="1" \
