Delete old openJDK before install required new one

--- a/jenkins-slaves/jenkins-slave-mvn3.6-openjdk10-node10/Dockerfile
+++ b/jenkins-slaves/jenkins-slave-mvn3.6-openjdk10-node10/Dockerfile
@@ -23,6 +23,14 @@ RUN yum -y update
 
 
 
+###########################
+### Remove old Java JDK ###
+###########################
+RUN yum -y remove $(rpm -qa | grep java)
+RUN yum -y remove $(rpm -qa | grep jdk)
+
+
+
 #######################
 ### Install OpenJDK ###
 #######################
