Remove old openJDK before install new one

--- a/jenkins-slaves/jenkins-slave-mvn3.6-openjdk10-node10/Dockerfile
+++ b/jenkins-slaves/jenkins-slave-mvn3.6-openjdk10-node10/Dockerfile
@@ -26,8 +26,7 @@ RUN yum -y update
 ###########################
 ### Remove old Java JDK ###
 ###########################
-RUN yum -y remove $(rpm -qa | grep java)
-RUN yum -y remove $(rpm -qa | grep jdk)
+RUN yum -y remove $(rpm -qa | grep openjdk)
 
 
 
