do not remove old jdk

--- a/jenkins-slaves/jenkins-slave-mvn3.6-openjdk10-node10/Dockerfile
+++ b/jenkins-slaves/jenkins-slave-mvn3.6-openjdk10-node10/Dockerfile
@@ -26,7 +26,7 @@ RUN yum -y update
 ###########################
 ### Remove old Java JDK ###
 ###########################
-RUN yum -y remove $(rpm -qa | grep openjdk)
+# RUN yum -y remove $(rpm -qa | grep openjdk)
 
 
 
