--- a/jenkins-slaves/jenkins-slave-mvn3.6-openjdk10-node10/Dockerfile
+++ b/jenkins-slaves/jenkins-slave-mvn3.6-openjdk10-node10/Dockerfile
@@ -73,6 +73,8 @@ RUN mkdir -p ${NPM_DIR} \
 ENV PATH="${NPM_DIR}/bin:${PATH}"
 RUN npm install -g npm-check-updates
 
+# TEST
+ADD tools
 
 RUN chown -R 1001:0 $HOME && \
     chmod -R g+rw $HOME
