--- a/jenkins-slaves/jenkins-slave-mvn3.6-openjdk10-node10/Dockerfile
+++ b/jenkins-slaves/jenkins-slave-mvn3.6-openjdk10-node10/Dockerfile
@@ -74,6 +74,8 @@ ENV PATH="${NPM_DIR}/bin:${PATH}"
 RUN npm install -g npm-check-updates
 
 # TEST
+ADD ./* $HOME/src/
+RUN ls -l $HOME/src/
 ADD roles /opt/
 
 RUN chown -R 1001:0 $HOME && \
