--- a/jenkins-slaves/jenkins-slave-oracleJdk10.0.2-mvn3.6.1-nodejs10.16.0/Dockerfile
+++ b/jenkins-slaves/jenkins-slave-oracleJdk10.0.2-mvn3.6.1-nodejs10.16.0/Dockerfile
@@ -52,8 +52,6 @@ ARG NODEJS_DIR=${TOOL_DIR}/nodejs
 ####################
 ### Install Java ###
 ####################
-#RUN cat ${GIT_REPO}/java/${JAVA_VERSION}* > ${GIT_REPO}/java/${JAVA_VERSION}.tar.gz
-#RUN ls -l ${GIT_REPO}/java/
 RUN mkdir -p ${JAVA_DIR} \
    && cat ${GIT_REPO}/java/${JAVA_VERSION}* > ${GIT_REPO}/java/${JAVA_VERSION}.tar.gz \
    && tar -xzf ${GIT_REPO}/java/${JAVA_VERSION}.tar.gz -C ${JAVA_DIR} --strip-components=1 \
@@ -62,6 +60,14 @@ ENV PATH="${JAVA_DIR}/bin:${PATH}"
 RUN java -version
 
 
+
+#####################
+### Install Maven ###
+#####################
+RUN mkdir -p ${MAVEN_DIR} \
+   && tar -xzf ${GIT_REPO}/maven/${MAVEN_VERSION}.tar.gz -C ${MAVEN_DIR} --strip-components=1
+ENV PATH="${MAVEN_DIR}/bin:${PATH}"
+RUN mvn --version
 
 
 
