--- a/jenkins-slaves/jenkins-slave-oracleJdk10.0.2-mvn3.6.1-nodejs10.16.0/Dockerfile
+++ b/jenkins-slaves/jenkins-slave-oracleJdk10.0.2-mvn3.6.1-nodejs10.16.0/Dockerfile
@@ -3,7 +3,12 @@ FROM openshift/jenkins-slave-base-centos7
 ARG JAVA_VERSION=oracleJdk10.0.2
 ARG MAVEN_VERSION=mvn3.6.1
 ARG NODEJS_VERSION=nodejs10.16.0
+
 ARG GIT_REPO=/tmp/tools
+ARG TOOL_DIR=/opt/tools
+ARG JAVA_DIR=${TOOL_DIR}/java
+ARG MAVEN_DIR=${TOOL_DIR}/maven
+ARG NODEJS_DIR=${TOOL_DIR}/nodejs
 
 LABEL com.redhat.component="jenkins-slave-${JAVA_VERSION}-${MAVEN_VERSION}-${NODEJS_VERSION}" \
       name="openshift3/jenkins-slave-${JAVA_VERSION}-${MAVEN_VERSION}-${NODEJS_VERSION}" \
@@ -19,6 +24,7 @@ ENV BASH_ENV=/usr/local/bin/scl_enable \
     PROMPT_COMMAND=". /usr/local/bin/scl_enable"
     
 
+
 #################
 ### Update OS ###
 #################
@@ -29,7 +35,8 @@ RUN yum -y update
 ###################
 ### Install GIT ###
 ###################
-RUN yum install -y git
+RUN yum install -y git && \
+	yum clean all -y
 
 
 
@@ -37,102 +44,66 @@ RUN yum install -y git
 ### Clone Tools-Repo ###
 ########################
 RUN git clone https://github.com/dimjost/tools ${GIT_REPO}
-RUN ls -l ${GIT_REPO}
 
 
-
-
-
-
-ARG TOOL_DIR=/opt/tools
-ARG JAVA_DIR=${TOOL_DIR}/java
-ARG MAVEN_DIR=${TOOL_DIR}/maven
-ARG NODEJS_DIR=${TOOL_DIR}/nodejs
 
 ####################
 ### Install Java ###
 ####################
-RUN mkdir -p ${JAVA_DIR} \
-   && cat ${GIT_REPO}/java/${JAVA_VERSION}* > ${GIT_REPO}/java/${JAVA_VERSION}.tar.gz \
-   && tar -xzf ${GIT_REPO}/java/${JAVA_VERSION}.tar.gz -C ${JAVA_DIR} --strip-components=1 \
-   && rm -f ${GIT_REPO}/java/${JAVA_VERSION}.tar.gz
+RUN mkdir -p ${JAVA_DIR} && \
+	cat ${GIT_REPO}/java/${JAVA_VERSION}* > ${GIT_REPO}/java/${JAVA_VERSION}.tar.gz && \
+	tar -xzf ${GIT_REPO}/java/${JAVA_VERSION}.tar.gz -C ${JAVA_DIR} --strip-components=1 && \
+	rm -f ${GIT_REPO}/java/${JAVA_VERSION}.tar.gz
 ENV PATH="${JAVA_DIR}/bin:${PATH}"
-RUN java -version
 
 
 
 #####################
 ### Install Maven ###
 #####################
-RUN mkdir -p ${MAVEN_DIR} \
-   && tar -xzf ${GIT_REPO}/maven/${MAVEN_VERSION}.tar.gz -C ${MAVEN_DIR} --strip-components=1
+RUN mkdir -p ${MAVEN_DIR} && \
+	tar -xzf ${GIT_REPO}/maven/${MAVEN_VERSION}.tar.gz -C ${MAVEN_DIR} --strip-components=1
 ENV PATH="${MAVEN_DIR}/bin:${PATH}"
-RUN mvn --version
-
+ENV M2_HOME ${MAVEN_DIR}
+ENV MAVEN_CONFIG "$USER_HOME_DIR/.m2"
 
 
 ######################
 ### Install NodeJS ###
 ######################
-RUN mkdir -p ${NODEJS_DIR} \
-   && tar -xf ${GIT_REPO}/nodejs/${NODEJS_VERSION}.tar.xz -C ${NODEJS_DIR} --strip-components=1
+RUN mkdir -p ${NODEJS_DIR} && \
+	tar -xf ${GIT_REPO}/nodejs/${NODEJS_VERSION}.tar.xz -C ${NODEJS_DIR} --strip-components=1
 ENV PATH="${NODEJS_DIR}/bin:${PATH}"
-RUN java -version \
-	&& mvn --version \
-	&& node --version \
-	&& npm --version
+RUN npm install -g npm-check-updates
 
 
-#######################
-### Install OpenJDK ###
-#######################
-#ADD yum-install.sh /opt/yum-install.sh
-#RUN chmod +x /opt/yum-install.sh
-#RUN /opt/yum-install.sh
 
-#RUN yum install -y java-11-openjdk-devel.x86_64 && \
-#    rpm -V  java-11-openjdk-devel && \
-#    yum clean all -y
-	
-	
-#####################
-### Install Maven ###
-#####################
-#RUN mkdir -p $HOME/.m2
-#ARG MAVEN_DIR=/opt/maven/apache-maven-${MAVEN_VERSION}
-#ARG MAVEN_BASE_URL=https://repo.maven.apache.org/maven2/org/apache/maven/apache-maven/${MAVEN_VERSION}
-#ENV M2_HOME ${MAVEN_DIR}
-#ENV MAVEN_CONFIG "$USER_HOME_DIR/.m2"
-
-#RUN mkdir -p ${MAVEN_DIR} \
-#  && curl ${MAVEN_BASE_URL}/apache-maven-${MAVEN_VERSION}-bin.tar.gz --output /tmp/apache-maven.tar.gz  \
-#  && tar -xzf /tmp/apache-maven.tar.gz -C ${MAVEN_DIR} --strip-components=1 \
-#  && rm -f /tmp/apache-maven.tar.gz 
-
-#ENV PATH="${MAVEN_DIR}/bin:${PATH}"
+######################
+### Check versions ###
+######################
+RUN java -version && \
+	mvn --version && \
+	node --version && \
+	npm --version
 
 
-###################
-### Install NPM ###
-###################
-#ARG NPM_DIR=${USER_HOME_DIR}/node-v${NPM_VERSION}
-#ARG NPM_BASE_URL=https://nodejs.org/dist/v${NPM_VERSION}
 
-#RUN mkdir -p ${NPM_DIR} \
-#	&& curl ${NPM_BASE_URL}/node-v${NPM_VERSION}-linux-x64.tar.gz --output /tmp/node-v${NPM_VERSION}-linux-x64.tar.gz \
-#	&& tar -xf /tmp/node-v${NPM_VERSION}-linux-x64.tar.gz -C ${NPM_DIR} --strip-components=1 \
-#	&& rm -f /tmp/node-v${NPM_VERSION}-linux-x64.tar.gz
-
-#ENV PATH="${NPM_DIR}/bin:${PATH}"
-#RUN npm install -g npm-check-updates
-
-
-#RUN chown -R 1001:0 $HOME && \
-#    chmod -R g+rw $HOME
+##############################
+### Set folder permissions ###
+##############################
+RUN chown -R 1001:0 $HOME && \
+    chmod -R g+rw $HOME
     
-#RUN chown -R 1001:0 /opt && \
-#    chmod -R g+rw /opt
+RUN chown -R 1001:0 /opt && \
+    chmod -R g+rw /opt
 
+
+
+############################
+### Change to build user ###
+############################
 USER 1001
 
-#CMD ["mvn"]
+
+
+CMD ["mvn"]
