--- a/jenkins-slaves/.applier/group_vars/seed-hosts.yml
+++ b/jenkins-slaves/.applier/group_vars/seed-hosts.yml
@@ -79,6 +79,15 @@ openshift_cluster_content:
     tags:
     - jenkins-slaves
     - mvn-slave
+  - name: jenkins-slave-oracleJdk10.0.2-mvn3.6.1-nodejs10.16.0
+    template: "{{ inventory_dir }}/../.openshift/templates/jenkins-slave-generic-template.yml"
+    params: "{{ inventory_dir }}/../.openshift/params/oracleJdk10.0.2-mvn3.6.1-nodejs10.16.0"
+    params_from_vars:
+      SOURCE_REPOSITORY_REF: "{{ slave_repo_ref }}"
+    namespace: "{{ namespace }}"
+    tags:
+    - jenkins-slaves
+    - mvn-slave
   - name: jenkins-slave-npm
     template: "{{ inventory_dir }}/../.openshift/templates/jenkins-slave-generic-template.yml"
     params: "{{ inventory_dir }}/../.openshift/params/npm"
