Remove Git-Repo

--- a/jenkins-slaves/jenkins-slave-oracleJdk10.0.2-mvn3.6.1-nodejs10.16.0/Dockerfile
+++ b/jenkins-slaves/jenkins-slave-oracleJdk10.0.2-mvn3.6.1-nodejs10.16.0/Dockerfile
@@ -85,6 +85,13 @@ RUN java -version && \
 	mvn --version && \
 	node --version && \
 	npm --version
+	
+	
+
+######################
+### Remove Git-Repo ###
+######################
+RUN rm -f ${GIT_REPO}
 
 
 
