--- a/jenkins-slaves/jenkins-slave-oraclejdk10.0.2-mvn3.6.1-nodejs10.16.0/Dockerfile
+++ b/jenkins-slaves/jenkins-slave-oraclejdk10.0.2-mvn3.6.1-nodejs10.16.0/Dockerfile
@@ -91,7 +91,7 @@ RUN java -version && \
 ######################
 ### Remove Git-Repo ###
 ######################
-RUN rm -f ${GIT_REPO}
+RUN rm -R -f ${GIT_REPO}
 
 
 
